refactor: composer.autoload.psr-4

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
   "description": "SoapClient for usage with GO API (https://www.general-overnight.com).",
   "require": {
     "php": "^7.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "GoCLient\\": "src"
+    }
   }
 }
